Updated package files to reflect new backend entry point

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,15 @@
   "name": "jobs_rest",
   "version": "1.0.0",
   "description": "",
-  "main": "job_controller.mjs",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon job_controller.mjs"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.7"
