--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /node_modules
 /backend/node_modules
+/frontend/node_modules
 /.pnp
 .pnp.js
 
@@ -22,3 +23,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+backend/.env
+frontend.enc
