--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /node_modules
 /backend/node_modules
 /frontend/node_modules
+node_modules/
 /.pnp
 .pnp.js
 .env
@@ -25,4 +26,4 @@ yarn-debug.log*
 yarn-error.log*
 
 backend/.env
-frontend.enc
+frontend.env
