--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "mongoose": "^6.9.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react-scripts": "^5.0.1"
   },
   "engines": {
     "node": "18.11.0",
