--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.7",
+    "react-bootstrap": "^2.7.2",
     "react-scripts": "^5.0.1"
   },
   "engines": {
