--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.7",
     "react-bootstrap": "^2.7.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.7.0"
   },
   "engines": {
     "node": "18.11.0",
