--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.7",
     "react-bootstrap": "^2.7.2",
